// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Blood Deathknight Analyzer analyzers Abilities matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers Abilities matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Blood Deathknight Analyzer analyzers AlwaysBeCasting matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <img
            alt="Downtime"
            className="icon game "
            src="//render-us.worldofwarcraft.com/icons/56/spell_mage_altertime.jpg"
          />
           
          Downtime
        </label>
        <div
          className="value"
        >
          23.12 %
        </div>
        <div
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <div
            className="statistic-box-bar"
          >
            <div
              className="stat-health-bg"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "width": "76.88251894636313%",
                }
              }
            >
              <img
                alt="Active time"
                src="/img/sword.png"
              />
            </div>
            <div
              className="remainder DeathKnight-bg"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
            >
              <img
                alt="Downtime"
                src="/img/afk.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers AlwaysBeCasting matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "spell_mage_altertime",
    "importance": "minor",
    "issue": <React.Fragment>
      While some downtime is inevitable in fights with movement, you should aim to reduce downtime to prevent capping Runes.  You can reduce downtime by casting ranged/filler abilities like 
      <SpellLink
        icon={true}
        id={206931}
      />
       or 
      <SpellLink
        icon={true}
        id={50842}
      />
    </React.Fragment>,
    "stat": <React.Fragment>
      23.12% downtime
       (
      &lt;20.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Blood Deathknight Analyzer analyzers BloddyRuneblade matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers BloddyRuneblade matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers BloodPlagueUptime matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=55078"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Blood Plague"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_deathknight_bloodplague.jpg"
            />
          </a>
           
          Blood Plague uptime
        </label>
        <div
          className="value"
        >
          95.49 %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers BloodPlagueUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers Blooddrinker matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=206931"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Blooddrinker"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_animusdraw.jpg"
            />
          </a>
           
          Channels cancelled early
        </label>
        <div
          className="value"
        >
          1 out of 4
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers Blooddrinker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers Bloodworms matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=195679"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Bloodworms"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_soulleech.jpg"
            />
          </a>
           
          Bloodworm Stats
        </label>
        <div
          className="value"
        >
          14.01 % / 1,123 HPS
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers Bloodworms matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers BoneShield matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=195181"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Bone Shield"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_deathknight_boneshield.jpg"
            />
          </a>
           
          Bone Shield uptime
        </label>
        <div
          className="value"
        >
          96.21 %
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-12"
        />
      </div>
      <div
        className="statistic-expansion-button-holster"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
        >
          <span
            className="glyphicon glyphicon-chevron-down"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers BoneShield matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers BoneShieldStacksBySeconds matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers BoneShieldStacksBySeconds matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers BoneSpikeGraveyard matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers BoneSpikeGraveyard matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers BonesOfTheDamned matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers BonesOfTheDamned matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers Bonestorm matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=194844"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Bonestorm"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/achievement_boss_lordmarrowgar.jpg"
            />
          </a>
           
          of your total damage
        </label>
        <div
          className="value"
        >
          0.00 %
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers Bonestorm matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers Channeling matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers Channeling matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers Checklist matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers Checklist matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Blood Deathknight Analyzer analyzers Consumption matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers Consumption matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers CooldownThroughputTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers CooldownThroughputTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers CrimsonScourge matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=81141"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Crimson Scourge"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warrior_bloodnova.jpg"
            />
          </a>
           
          Crimson Scourge procs wasted
        </label>
        <div
          className="value"
        >
          33.33 %
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers CrimsonScourge matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "ability_warrior_bloodnova",
    "importance": "major",
    "issue": <React.Fragment>
      You had unspent 
      <SpellLink
        icon={true}
        id={81141}
      />
       procs. Make sure you always use them.
    </React.Fragment>,
    "stat": <React.Fragment>
      33.33% Crimson Scourge procs wasted
       (
      &lt;5.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Blood Deathknight Analyzer analyzers DancingRuneWeapon matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers DancingRuneWeapon matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers DeathStrikeTiming matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers DeathStrikeTiming matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers DeathsCaress matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers DeathsCaress matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers EternalRuneWeapon matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers EternalRuneWeapon matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers FoulBulwark matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers FoulBulwark matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers GlobalCooldown matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers GlobalCooldown matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers Heartbreaker matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers Heartbreaker matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers Hemostasis matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=273946"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Hemostasis"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_deathwing_bloodcorruption_earth.jpg"
            />
          </a>
           
          Death Strikes with Hemostasis
        </label>
        <div
          className="value"
        >
          19 / 20
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers Hemostasis matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers InitialMarrowrendCast matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers InitialMarrowrendCast matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers MarkOfBlood matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers MarkOfBlood matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers MarrowrendUsage matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=195182"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Marrowrend"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_deathknight_marrowrend.jpg"
            />
          </a>
           
          Bad Marrowrend casts
        </label>
        <div
          className="value"
        >
          0 / 10
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers MarrowrendUsage matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers MitigationCheck matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=195181"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Bone Shield"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_deathknight_boneshield.jpg"
            />
          </a>
           
          Soft mitigation checks passed.
        </label>
        <div
          className="value"
        >
          100.00 %
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-12"
        />
      </div>
      <div
        className="statistic-expansion-button-holster"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
        >
          <span
            className="glyphicon glyphicon-chevron-down"
          />
        </button>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers MitigationCheck matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers Ossuary matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=219786"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Ossuary"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_deathknight_brittlebones.jpg"
            />
          </a>
           
          Death Strikes without Ossuary
        </label>
        <div
          className="value"
        >
          3 / 20
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers Ossuary matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "ability_deathknight_brittlebones",
    "importance": "regular",
    "issue": "Your Ossuary usage can be improved. Avoid casting Death Strike while not having Ossuary up as you lose Runic Power by doing so.",
    "stat": <React.Fragment>
      85.00% Ossuary efficiency
       (
      100.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Blood Deathknight Analyzer analyzers RapidDecomposition matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers RapidDecomposition matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers RedThirst matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers RedThirst matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers RuneDetails matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers RuneDetails matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers RuneStrike matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers RuneStrike matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers RuneTracker matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <img
            alt="Rune 1"
            className="icon game "
            src="//render-us.worldofwarcraft.com/icons/56/spell_deathknight_frozenruneweapon.jpg"
          />
           
          Runes overcapped
        </label>
        <div
          className="value"
        >
          1.76 %
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-12"
        />
      </div>
      <div
        className="statistic-expansion-button-holster"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
        >
          <span
            className="glyphicon glyphicon-chevron-down"
          />
        </button>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers RuneTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers RunicPowerDetails matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <img
            alt=""
            className="icon game "
            src="//render-us.worldofwarcraft.com/icons/56/inv_sword_62.jpg"
          />
           
          Runic Power wasted
        </label>
        <div
          className="value"
        >
          1.70 %
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers RunicPowerDetails matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers RunicPowerTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Blood Deathknight Analyzer analyzers RunicPowerTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer analyzers Tombstone matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers Tombstone matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers Voracious matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers Voracious matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Blood Deathknight Analyzer analyzers WillOfTheNecropolis matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=206967"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Will of the Necropolis"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/achievement_boss_kelthuzad_01.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=206967"
            rel="noopener noreferrer"
            target="_blank"
          >
            Will of the Necropolis
          </a>
        </label>
        <div
          className="value"
        >
          1.32 % / 106 HPS
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Blood Deathknight Analyzer analyzers WillOfTheNecropolis matches the suggestions snapshot 1`] = `Array []`;

exports[`The Blood Deathknight Analyzer should match the checklist snapshot 1`] = `
<ul
  className="checklist"
>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your short cooldowns
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            These should generally always be recharging to maximize efficiency.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=50842"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="/img/Icons/spell_deathknight_bloodboil.jpg"
                  />
                   
                  Blood Boil
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  96.69%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=206931"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/ability_animusdraw.jpg"
                  />
                   
                  Blooddrinker
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  91.94%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Do not overcap your resources
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Death Knights are a resource based class, relying on Runes and Runic Power to cast core abilities. Try to spend Runic Power before reaching the maximum amount and always keep atleast 3 Runes on cooldown to avoid wasting resources.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Runic Power Efficiency
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  98.30%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Rune Efficiency
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  98.24%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=195182"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/ability_deathknight_marrowrend.jpg"
                  />
                   
                  Marrowrend
                </a>
                 Efficiency
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=195292"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/ability_deathknight_deathscaress.jpg"
                  />
                   
                  Death's Caress
                </a>
                 Efficiency
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your offensive cooldowns
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            You should aim to use these cooldowns as often as you can to maximize your damage output unless you are saving them for their defensive value.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=49028"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/inv_sword_07.jpg"
                  />
                   
                  Dancing Rune Weapon
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=194844"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/achievement_boss_lordmarrowgar.jpg"
                  />
                   
                  Bonestorm
                </a>
                 Efficiency
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Maintain your buffs and debuffs
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "86.21994998218773%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            It is important to maintain these as they contribute a large amount to your DPS and HPS.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=55078"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_deathknight_bloodplague.jpg"
                  />
                   
                  Blood Plague
                </a>
                 Uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  95.49%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=195181"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/ability_deathknight_boneshield.jpg"
                  />
                   
                  Bone Shield
                </a>
                 Uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  96.21%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=219786"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/ability_deathknight_brittlebones.jpg"
                  />
                   
                  Ossuary
                </a>
                 Uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  87.62%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ffc84a",
                        "transition": "background-color 800ms",
                        "width": "58.65984994656319%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your defensive cooldowns
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ffc84a",
                  "width": "53.3536913241092%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Use these to block damage spikes and keep damage smooth to reduce external healing required.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=55233"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_lifedrain.jpg"
                  />
                   
                  Vampiric Blood
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  64.55%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=48792"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_deathknight_iceboundfortitude.jpg"
                  />
                   
                  Icebound Fortitude
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=48707"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_antimagicshell.jpg"
                  />
                   
                  Anti-Magic Shell
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  43.04%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ffc84a",
                        "transition": "background-color 800ms",
                        "width": "60.06107397232762%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Be well prepared
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ffc84a",
                  "width": "59.25925925925925%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Being well prepared with food, flasks, potions and enchants is an easy way to improve your performance.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                All items enchanted
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Using high quality enchants
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  1
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#df7102",
                        "transition": "background-color 800ms",
                        "width": "33.33333333333333%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a second potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a high quality pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
